# agentshield

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: ci.yml
dashboard/: package-lock.json  package.json
sdk/: pyproject.toml  setup.py
sdk-dotnet/AgentFortress/: AgentFortress.csproj
sdk-dotnet/AgentFortress/src/: AgentFortress.cs
sdk-go/: go.mod
sdk-go/agentfortress/: shield.go
sdk-js/: README.md  package-lock.json  package.json  test-v2.ts
sdk-js/dist-test/: test-v2.js
sdk-js/src/: index.ts
sdk-ruby/: README.md  agentfortress-1.0.0.gem  agentfortress.gemspec
sdk-ruby/lib/: agentfortress.rb
sdk-ruby/lib/agentfortress/: scanner.rb  shield.rb  version.rb
sdk-rust/: Cargo.toml
sdk-rust/src/: lib.rs  models.rs  policies.rs  scanner.rs
sdk/agentshield/: __init__.py  behavioral.py  chainguard.py  context.py  core.py  explainability.py  guardian.py  metrics.py  ratelimiter.py  realtime.py  redaction.py  selftest.py  threatintel.py  vault.py
sdk/agentshield/scanner/: __init__.py  advanced.py
sdk/agentshield/wrappers/: generic.py
tests/sdk/: test_advanced_scanner.py
tests/threat-intel/: test_ioc_manager.py  test_mitre_mapping.py
