[package]
name = "agentfortress"
version = "2.0.0"
edition = "2021"
authors = ["Aayush <aayush022008@gmail.com>"]
description = "Runtime protection and security monitoring for AI agents — The CrowdStrike for AI Agents"
license = "MIT"
repository = "https://github.com/aayush022008/agentfortress"
homepage = "https://github.com/aayush022008/agentfortress"
documentation = "https://docs.rs/agentfortress"
keywords = ["security", "ai", "agents", "llm", "monitoring"]
categories = ["development-tools", "network-programming"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
