[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentfortress"
version = "2.0.0"
description = "Runtime protection and security monitoring for AI agents — The CrowdStrike for AI Agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Aayush", email = "aayush022008@gmail.com"}]
keywords = ["security", "ai", "agents", "llm", "monitoring", "threat-detection", "prompt-injection", "runtime-protection", "agentfortress", "langchain", "crewai", "autogen", "openai", "cybersecurity", "machine-learning", "anomaly-detection", "compliance", "gdpr", "hipaa", "soc2"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
    "Topic :: Internet :: Log Analysis",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "cryptography>=41.0",
    "httpx>=0.25",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "pydantic>=2.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff", "mypy"]
langchain = ["langchain>=0.1.0"]
crewai = ["crewai>=0.1.0"]
autogen = ["pyautogen>=0.2.0"]
openai = ["openai>=1.0.0"]

[project.urls]
Homepage = "https://github.com/aayush022008/agentfortress"
Repository = "https://github.com/aayush022008/agentfortress"
Documentation = "https://github.com/aayush022008/agentfortress/blob/main/docs/quickstart.md"
"Bug Tracker" = "https://github.com/aayush022008/agentfortress/issues"
